content/classes/2.2-alpha/ArcRotateCamera.md
---
ID_PAGE: 25120
PG_TITLE: ArcRotateCamera
PG_VERSION: 2.1
TAGS:
    - Node
    - Camera
    - ArcRotateCamera
---
##Description

class [ArcRotateCamera](/classes/2.2-alpha/ArcRotateCamera) extends [TargetCamera](/classes/2.2-alpha/TargetCamera)



##Constructor

##new [ArcRotateCamera](/classes/2.2-alpha/ArcRotateCamera)(name, alpha, beta, radius, target, scene)

Create a new [ArcRotateCamera](/classes/2.2-alpha/ArcRotateCamera).
 [ArcRotateCamera](/classes/2.2-alpha/ArcRotateCamera) is a camera that rotates around a given pivot. It can be controlled with the mouse or touch events (and it also requires hand.js to work)
A tutorial about [ArcRotateCamera](/classes/2.2-alpha/ArcRotateCamera) can be found here

####Parameters
 | Name | Type | Description
---|---|---|---
 | name | string | 
 | alpha | number | 
 | beta | number | 
 | radius | number | 
 | target | any | 
 | scene | [Scene](/classes/2.2-alpha/Scene) | 

##Members

###alpha : number

Alpha of the [ArcRotateCamera](/classes/2.2-alpha/ArcRotateCamera) (Rotation angle around Y axis)

###beta : number

Beta of the [ArcRotateCamera](/classes/2.2-alpha/ArcRotateCamera) (Rotation angle around X axis)

###radius : number

Radius of the [ArcRotateCamera](/classes/2.2-alpha/ArcRotateCamera)

###target : any

Target of the [ArcRotateCamera](/classes/2.2-alpha/ArcRotateCamera)

###inertialAlphaOffset : number

Inertial alpha offset

###inertialBetaOffset : number

Inertial beta offset

###inertialRadiusOffset : number

Inertial radius offset

###lowerAlphaLimit : any

Lower alpha limit

###upperAlphaLimit : any

Upper alpha limit

###lowerBetaLimit : number

Lower beta limit

###upperBetaLimit : number

Upper beta limit

###lowerRadiusLimit : any

Lower radius limit

###upperRadiusLimit : any

Upper radius limit

###angularSensibility : number

Angular sensibility

###wheelPrecision : number

Wheel precision

###pinchPrecision : number

PinchPrecision

###panningSensibility : number



###inertialPanningX : number



###inertialPanningY : number



###keysUp : number[]

Key to control the camera UP

###keysDown : number[]

Key to control the camera DOWN

###keysLeft : number[]

Key to control the camera LEFT

###keysRight : number[]

Key to control the camera RIGHT

###zoomOnFactor : number

Zoom on factor

###targetScreenOffset : [Vector2](/classes/2.2-alpha/Vector2)



###pinchInwards : boolean



###allowUpsideDown : boolean



###onCollide : (collidedMesh: [AbstractMesh](/classes/2.2-alpha/AbstractMesh)) =&gt; void

OnCollide

###checkCollisions : boolean

CheckCollisions

###collisionRadius : [Vector3](/classes/2.2-alpha/Vector3)

CollisionsRadius

##Functions

###attachControl(element, noPreventDefault, useCtrlForPanning) &rarr; void



####Parameters
 | Name | Type | Description
---|---|---|---
 | element | HTMLElement | 
optional | noPreventDefault | boolean | 
optional | useCtrlForPanning | boolean | 

###detachControl(element) &rarr; void

Detach camera control and display from the specified canvas

####Parameters
 | Name | Type | Description
---|---|---|---
 | element | HTMLElement | 

###setPosition(position) &rarr; void

Set the position of the [ArcRotateCamera](/classes/2.2-alpha/ArcRotateCamera)

####Parameters
 | Name | Type | Description
---|---|---|---
 | position | [Vector3](/classes/2.2-alpha/Vector3) | 

###zoomOn(meshes, doNotUpdateMaxZ) &rarr; void



####Parameters
 | Name | Type | Description
---|---|---|---
optional | meshes | [AbstractMesh](/classes/2.2-alpha/AbstractMesh)[] | 
optional | doNotUpdateMaxZ | boolean | 

###focusOn(meshesOrMinMaxVectorAndDistance, doNotUpdateMaxZ) &rarr; void



####Parameters
 | Name | Type | Description
---|---|---|---
 | meshesOrMinMaxVectorAndDistance | any | 
optional | doNotUpdateMaxZ | boolean | 

###createRigCamera(name, cameraIndex) &rarr; [Camera](/classes/2.2-alpha/Camera)

@override

Override [Camera](/classes/2.2-alpha/Camera).createRigCamera

####Parameters
 | Name | Type | Description
---|---|---|---
 | name | string | 
 | cameraIndex | number | 

